--- a/public/index.html
+++ b/public/index.html
@@ -5,14 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="format-detection" content="telephone=no">
-    <!--<link rel="stylesheet" href="/assets/css/app.css">-->
+    <link rel="stylesheet" href="css/app.css">
     <title>snicket</title>
 </head>
 <body>
 
 <div id="app"></div>
-
-<!--<script src="/assets/js/libs/react.min.js"></script>-->
-<!--<script src="/assets/js/bundle/app.js"></script>-->
+    This page is root page !!
+<!--<script src="js/libs/react.min.js"></script>-->
+<!--<script src="js/bundle/app.js"></script>-->
+<script src="js/hello.js"></script>
 </body>
 </html>
