Construct a develop environment of gulp

--- a/public/index.html
+++ b/public/index.html
@@ -5,15 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="format-detection" content="telephone=no">
-    <link rel="stylesheet" href="css/app.css">
+    <!--<link rel="stylesheet" href="css/app.css">-->
     <title>snicket</title>
 </head>
 <body>
 
 <div id="app"></div>
-    This page is root page !!
-<!--<script src="js/libs/react.min.js"></script>-->
-<!--<script src="js/bundle/app.js"></script>-->
-<script src="js/hello.js"></script>
+
+<script src="js/libs/react.min.js"></script>
+<script src="js/bundle/app.js"></script>
 </body>
 </html>
